# django-portfolio

./: pyproject.toml  requirements.txt
portfolio/home/templates/home/: index.html
portfolio/portfolio/: settings.py  urls.py  wsgi.py
portfolio/pythonprojects/: apps.py  urls.py  views.py
portfolio/pythonprojects/templates/pythonprojects/: dad_jokes.html  python.html
portfolio/resume/: urls.py  views.py
portfolio/resume/templates/resume/: resume.html
portfolio/static/css/: dad.css  style.css
portfolio/static/js/: index.js
portfolio/templates/: base.html
portfolio/webprojects/: apps.py  urls.py  views.py
portfolio/webprojects/templates/webprojects/: web.html
