[tool.poetry]
name = "django-portfolio"
version = "0.1.0"
description = ""
authors = ["John Laffey <laffeychem@gmail.com>"]
readme = "README.md"
packages = [{include = "django_portfolio"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
click = "8.1.3"
django = "4.1.4"
mypy-extensions = "0.4.3"
pathspec = "0.10.3"
platformdirs = "2.6.0"
sqlparse = "0.4.3"
tomli = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
